# tcp-chat-tui

./: Cargo.toml  Makefile  go.mod
cmd/: main.go
pkg/server/: namegen.go  room.go  server.go
src/: app.rs  main.rs
